# MadButterfly

./: COPYING.h  Doxyfile  Doxyfile-sf  Makefile  Makefile.am  README.h  autogen.sh  build-mipsel.sh  config.mk  configure.ac  libmbfly-uninstalled.pc.in  libmbfly.pc.in
Android/examples/native_test/: Android.mk  native_test.cpp
Android/examples/testpath/: AndroidManifest.xml  build.properties  build.xml  local.properties
Android/examples/testpath/res/layout/: main.xml
Android/examples/testpath/res/values/: strings.xml
Android/examples/testpath/src/org/madbutterfly/android/examples/testpath/: testpath.java
Android/examples/testpath/tests/: AndroidManifest.xml
Android/examples/testpath/tests/src/org/madbutterfly/android/examples/testpath/: testpathTest.java
Android/java/: Android.mk  madbutterfly.atree  mbfly-permissions.xml
Android/java/org/madbutterfly/: InvalidStateException.java  MBView.java  _jni.java  coord.java  paint.java  redraw_man.java  shape.java
Android/jni/: Android.mk  mbfly.cpp
Android/mb/: Android.mk  config.cache
debian/: README.Debian  changelog  control  copyright  docs  libmadbutterfly-dev.install  madbuilder.dirs  madbuilder.links  madbuilder.postinst  rules
dox/: Android.h  MadButterfly_Clutter.h  arch.h  define_backend.h  dictionary.h  event_dispatching.h  first_program.h  footer.html  install.h  pyink.h
examples/: Makefile.am
examples/calculator/: Makefile  Makefile.am  Makefile.pmake  main.c
examples/drag/: Makefile.am  Makefile.in  main.c
examples/dynamic/: Makefile.am  Makefile.in  button.c  button.h  button.mb  hello.c  main.c  mbapp.c  mbbutton.c  mbbutton.h  text.c
examples/menu/: Makefile.am  animated_menu.c  animated_menu.h  filebrowser.c  main.c
examples/svg2code_ex/: Makefile  Makefile.am  Makefile.pmake  main.c
examples/tank/: Makefile  Makefile.am  Makefile.pmake  README  enemy.c  tank.h  tank_main.c
img/: core.gaphor  image_n_ldr.dia  image_n_ldr.eps  programming_model.dia  scribboo_arch.gaphor
include/: Makefile.am  animated_menu.h  mb.h  mb_X_supp.h  mb_af.h  mb_ani_menu.h  mb_animate.h  mb_backend.h  mb_backend_utils.h  mb_basic_types.h  mb_config.h.in  mb_cons_supp.h  mb_dfb_supp.h  mb_graph_engine.h  mb_graph_engine_cairo.h  mb_graph_engine_dummy.h  mb_graph_engine_openvg.h  mb_graph_engine_skia.h  mb_img_ldr.h  mb_obj.h  mb_observer.h  mb_paint.h  mb_prop.h  mb_redraw_man.h  mb_shapes.h  mb_so.h  mb_sprite.h  mb_timer.h  mb_tools.h  mb_types.h  mbapp.h  mbbutton.h
include/mb/: animate.h  paint.h  tools.h
inkscape/: AssignSymbol.py  MB_EditActiveButton.py  MB_EditButton.inx  MB_EditButton.py  MB_EditClickButton.py  MB_EditNormalButton.py  MB_Frame.inx  MB_Frame.py  MB_assignSymbol.inx  MB_button_select_click.inx  MB_button_select_normal.inx  Makefile  Makefile.am  README.mbext
inkscape/firefox/: INSTALL  MBFilter.inx  MBServer.py  Makefile  README  chrome.manifest  helper_mb.py  inkscape-mb-patch.diff  inkscape.js  install.rdf  install.sh  madbuilder.html  mozpluggerrc  scene.mbsvg  testsoap.py
inkscape/firefox/content/: MadBuilderOverlay.js  MadBuilderOverlay.xul  inkscape.js  jqSOAPClient.js  jqSOAPClient.pack.js  madbuilder.html  madswatter.js  main.js  sample.prj  wizard.js
inkscape/firefox/template/textmenu/: Makefile  app.c  app.h  app.prj  list.mbsvg  main.c
nodejs/: INSTALL.txt  Makefile.am  README  README.h  X_supp_njs.c  X_supp_njs.h  animate.js  canvas.js  component.js  coord.cc  coord.m4  font.cc  hello.cc  image_ldr.cc  mbapp.js  mbfly_njs.cc  mbfly_njs.h  mbfly_njs.m4  njs_mb_supp.c  njs_mb_supp.h  observer.cc  observer.m4  paints.cc  paints.m4  phone.js  run.sh  shapes.cc  shapes.m4  svg.js  svgviewer.js  testcanvas.js  testcase.js  testdesktop.js  testimage.js  testleak.js  testsvg.js  wscript
nodejs/examples/desktop/: testdesktop.js
nodejs/examples/mce/: README  epg.js  mainmenu.js  mbmce.js  test
nodejs/examples/phone/: phone.js
nodejs/examples/scene/: mainmenu.js  scene.js
nodejs/examples/scribbo/: testsvg.js
nodejs/examples/simple/: test-translate.js  testcanvas.js  testcase.js  testimage.js  testtraveling.js
nodejs/examples/testsvg/: svgviewer.js  testsvg.js
orgfiles/: auto_update.muse  index.muse
pyink/: FSM_window.glade  FSM_window.py  MBScene.py  comp_dock.py  component_dock.glade  consistency.py  data_monitor.py  dom_event.py  domview.py  domview_ui.py  extensions.py  frameline.py  html5css3.py  mbbbox.py  pyink.py  trait.py  tween.py  unlink_clone.py
src/: Makefile  Makefile.am  Makefile.pmake  X_main.c  X_supp.c  X_supp.h  animate.c  animate.h  chgcolor.c  cons_supp.c  coord.c  dfb_supp.c  event.c  geo.c  graph_engine_cairo.c  graph_engine_dfb.c  graph_engine_openvg.c  graph_engine_skia.c  graph_engine_skia.cpp  img_ldr.c  img_ldr_dummy.c  img_ldr_imlib2.c  mb.h  mb_timer.h  mb_types.h  mouse.c  observer.c  observer.h  paint.c  paint.h  prop.c  redraw_man.c  redraw_man.h  rotate.c  shape_image.c  shape_path.c  shape_rect.c  shape_stext.c  shape_text.c  shapes.h  (+9 more)
src/mbaf/: animated_menu.c  mbapp.c  mbbutton.c  mbobject.c
tools/: Makefile.am  Makefile.pmake  foreach.m4  gen_precomputed_tabs.py  gen_v8_binding.m4  mb_c_header.m4  mb_c_source.m4  svg2code.py
