# -*- indent-tabs-mode: t; tab-width: 8; c-basic-offset: 4; -*-
# vim: sw=4:ts=8:sts=4
include_HEADERS = 	\
	mb_config.h	\
	mb_animate.h 	\
	mb.h	 	\
	mb_timer.h 	\
	mb_types.h 	\
	mb_observer.h	\
	mb_paint.h	\
	mb_redraw_man.h	\
	mb_shapes.h	\
	mb_tools.h	\
	mb_prop.h	\
	mb_X_supp.h	\
	mb_img_ldr.h    \
	mb_af.h         \
	mb_ani_menu.h \
	mbbutton.h      \
	mb_so.h
